add bad user input directly